[tool.poetry]
name = "saas-agency"
version = "0.1.0"
description = "Project SaaS to manage tourism agencies"
authors = [
    "marlonmartins2"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["all"], version = "^0.115.12"}
pymongo = "^4.7.0"
fastapi-admin = "^1.0.0"
email-validator = "^2.1.1"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
